[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "greyhoundapi"
version = "1.0.0"
description = "Official Python client for the GreyhoundAPI — greyhound racing data for Great Britain and Australia."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "GreyhoundAPI" }]
keywords = ["greyhound", "greyhound-racing", "racing", "api", "sdk", "client", "betfair", "sports-data", "odds"]
dependencies = []
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://greyhoundapi.com"
Documentation = "https://greyhoundapi.com/documentation"
Source = "https://github.com/greyhoundapi/greyhoundapi-python"
Issues = "https://github.com/greyhoundapi/greyhoundapi-python/issues"

[tool.setuptools]
packages = ["greyhoundapi"]
